--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.11.0",
+    "collect.js": "^4.36.1",
     "flowbite": "^1.6.5",
     "i18next-vue": "^2.1.1",
     "vue": "^3.2.47",
@@ -22,9 +23,9 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
-    "vite-ssg": "^0.22.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
+    "vite-ssg": "^0.22.2",
     "vue-tsc": "^1.6.5"
   }
 }
