--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.11.0",
+    "caniuse-lite": "^1.0.30001572",
     "collect.js": "^4.36.1",
     "flowbite": "^1.6.5",
     "i18next-vue": "^2.1.1",
