--- a/package.json
+++ b/package.json
@@ -10,20 +10,28 @@
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.11.0",
+    "@tsparticles/slim": "^3.9.1",
+    "@tsparticles/vue3": "^3.0.1",
     "caniuse-lite": "^1.0.30001572",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "collect.js": "^4.36.1",
     "flowbite": "^1.6.5",
     "i18next-vue": "^2.1.1",
+    "lucide-vue-next": "^0.554.0",
+    "tailwind-merge": "^3.4.0",
     "vue": "^3.2.47",
     "vue-i18n": "^9.3.0-beta.19",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
+    "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vueuse/head": "^1.1.26",
-    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vite-ssg": "^0.22.2",
