--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/slim": "^3.9.1",
     "@tsparticles/vue3": "^3.0.1",
+    "@vueuse/core": "^14.0.0",
     "caniuse-lite": "^1.0.30001572",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "collect.js": "^4.36.1",
     "flowbite": "^1.6.5",
     "i18next-vue": "^2.1.1",
+    "lucide": "^0.554.0",
     "lucide-vue-next": "^0.554.0",
+    "reka-ui": "^2.6.0",
     "tailwind-merge": "^3.4.0",
     "tsparticles": "^3.9.1",
     "vue": "^3.2.47",
